# crew-dev-agents

./: .gitignore  README.md
.github/workflows/: build-push.yaml
crew/: Dockerfile  pyproject.toml
crew/config/: agents.yaml  tasks.yaml
crew/src/: crew.py  main.py
crew/src/flows/: self_eval_flow.py
crew/src/tools/: README.md  github_tool.py  metrics_tool.py
crew/tests/: test_github_tool.py  test_github_tools.py  test_tools.py
docs/: ARCHITECTURE.md  PLAN.md  RUNBOOK.md
k8s/ack-resources/: ecr-repository.yaml  s3-bucket.yaml  secrets-manager-secret.yaml
k8s/argocd/: application.yaml
k8s/base/: namespace.yaml  serviceaccount.yaml
k8s/instances/: example-repo.yaml  self.yaml
k8s/instances-manual/: example-repo.yaml
k8s/kro/: crewai-stack-rgd.yaml
k8s/workloads/: self-crew.yaml
terraform/: Makefile  capabilities.tf  eks.tf  github_oidc.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
