[project]
name = "crew-dev-agents"
version = "0.1.0"
description = "Self-improving CrewAI developer agent team for open-source repo maintenance"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.152.0",
    "boto3>=1.35.0",
    "PyGithub>=2.5.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
extend-ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D"]  # Disable docstring checks in tests

[tool.ruff.pydocstyle]
convention = "google"